--- a/src/github.com/junpeionizawa/callender/layout/index.html
+++ b/src/github.com/junpeionizawa/callender/layout/index.html
@@ -1,13 +1,21 @@
-
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>A static page</title>
-  <link rel="stylesheet" href="/stylesheets/styles.css">
+    <meta charset="utf-8" />
+    <title>golang template test</title>
 </head>
 <body>
-  <h1>カレンダー</h1>
+    <h1>Golang Template Sample</h1>
+    <p>Title --[{{.Title}}]</p>
+    <p>Message--[{{.Message}}] </p>
+    <div>
+        <h3>Items</h3>
+        {{range .List}}
+        <p>{{.}}</p>
+        {{end}}
+    </div>
+</body>
+ <h1>カレンダー</h1>
   <div id ="box1"> 
    <div class="box2"> 
    </div>
@@ -16,6 +24,4 @@
    <div class="box2"></div>
    <div class="box2"></div>
   </div>
-</body>
 </html>
-
