日付日時取得テンプレート

--- a/src/github.com/junpeionizawa/callender/view/index.html
+++ b/src/github.com/junpeionizawa/callender/view/index.html
@@ -10,6 +10,10 @@
 <body>
 <p>名前:{{.Name}}</p>
 <p>出身:{{.From}}</p>
+<p>:{{.Year }}</p>
+<p>:{{.Month }}</p>
+<p>:{{.Day }}</p>
+<p>:{{.Weekday }}</p>
 </body>
 
-</html>
+</html> 
