--- a/src/github.com/junpeionizawa/callender/resources/styles.css
+++ b/src/github.com/junpeionizawa/callender/resources/styles.css
@@ -2,3 +2,17 @@
 p {
 color:blue;
 }
+
+#box1 {
+	width :650px;
+	height :600px;
+	border : solid 1px #000000;
+	margin :0 auto;
+	display: flex; 
+} 
+
+.box2 {
+	width :130px;
+	height :20%;
+	border : solid 1px #000000;
+}
