--- a/src/github.com/junpeionizawa/callender/view/index.html
+++ b/src/github.com/junpeionizawa/callender/view/index.html
@@ -14,6 +14,14 @@
 <p>:{{.Month }}</p>
 <p>:{{.Day }}</p>
 <p>:{{.Weekday }}</p>
+ <h1>{{.Month }}月カレンダー</h1>
+  <div id ="box1"> 
+   <div class="box2"></div>
+   <div class="box2"></div>
+   <div class="box2"></div>
+   <div class="box2"></div>
+   <div class="box2"></div>
+  </div>
 </body>
 
 </html> 
