--- a/src/github.com/junpeionizawa/callender/resources/styles.css
+++ b/src/github.com/junpeionizawa/callender/resources/styles.css
@@ -1,10 +1,21 @@
 
 p {
-color:red;
+  color:blue;
+}
+
+.month_now{
+  font-size: 35px;
+  color:black;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+span {
+	color: grey;
 }
 
 #box1 {
-	width :650px;
+	width :1070px;
 	height :600px;
 	border : solid 1px #000000;
 	margin :0 auto;
@@ -12,7 +23,7 @@ color:red;
 } 
 
 .box2 {
-	width :130px;
-	height :20%;
+	width :152px;
+	height :25%;
 	border : solid 1px #000000;
 }
