--- a/src/github.com/junpeionizawa/callender/resources/styles.css
+++ b/src/github.com/junpeionizawa/callender/resources/styles.css
@@ -1,6 +1,20 @@
 
-p {
-  color:blue;
+.Date{
+  font-size :45px;
+  text-align:center;
+  color : #00608d;
+}
+
+.time {
+	font-size :70px;
+	text-align:center;
+	color:#fff;
+	padding-top:60px;
+}
+
+.calenderbox {
+	width :100%;
+	height :100%;
 }
 
 .month_now{
@@ -15,16 +29,28 @@ span {
 }
 
 #box1 {
-	width :1070px;
-	height :600px;
+	width :600px;
+	width :1170px;
+	height :400px;
 	border : solid 1px #000000;
 	margin :0 auto;
 	display: flex; 
 } 
 
 
-.box2 {
-	width :152px;
-	height :25%;
+#box2 {
+	width :50%;
+	height :400px;
 	border : solid 1px #000000;
+	box-shadow: 0 10px 10px rgba(20,0,0,0.15);
 }
+
+#box3 {
+	width :50%;
+	height :400px;
+	border : solid 1px #000000;
+	background: #66ccff;
+	box-shadow: 0 10px 10px rgba(20,0,0,0.15);
+}
+
+
