--- a/src/github.com/junpeionizawa/callender/resources/styles.css
+++ b/src/github.com/junpeionizawa/callender/resources/styles.css
@@ -54,3 +54,20 @@ span {
 }
 
 
+#box11 {
+	width :650px;
+	width :1070px;
+	height :600px;
+	border : solid 1px #000000;
+	margin :0 auto;
+	display: flex; 
+} 
+
+.box4 {
+	width :130px;
+	height :20%;
+	width :152px;
+	height :25%;
+	border : solid 1px #000000;
+} 
+
